Fixed a problem with displaying categories on smaller screens

--- a/frontend/src/features/Category/CategoryMenuBox/CategoryMenuBox.css
+++ b/frontend/src/features/Category/CategoryMenuBox/CategoryMenuBox.css
@@ -70,3 +70,9 @@
   }
 }
 
+@media (max-width: 935px) {
+  .nav {
+    font-size: 12px;
+  }
+}
+
